src/test/06-Errors/error-multi-decl-assign2.txt
error-multi-decl-assign2.ck:1:10: error: cannot '=>' from/to a multi-variable declaration
[1] [5.0] => auto a[], b[];
             ^
